// SPDX-FileCopyrightText: Copyright (c) 2021-2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: LicenseRef-NvidiaProprietary
//
// NVIDIA CORPORATION, its affiliates and licensors retain all intellectual
// property and proprietary rights in and to this material, related
// documentation and any modifications thereto. Any use, reproduction,
// disclosure or distribution of this material and related documentation
// without an express license agreement from NVIDIA CORPORATION or
// its affiliates is strictly prohibited.

syntax = "proto3";

package workflows.v1;

import "workflow.proto";
import "common_carbide.proto";
import "forge_carbide.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/nvidia/carbide-rest/workflow-schema/proto";

// CreateVPCRequest - request parameters of vpc
message CreateVPCRequest {
  string name = 1;
  string tenantOrganizationId = 2;
  optional WorkflowOptions options = 3;
  // ID of the vpc
  common.UUID vpc_id = 4;
}

// UpdateVPCRequest - update parameters of vpc
message UpdateVPCRequest {
  common.UUID id = 1;
  string name = 2;
  string tenantOrganizationId = 3;
  optional WorkflowOptions options = 4;
}

// DeleteVPCRequest - request to delete vpc
message DeleteVPCRequest {
  common.UUID id = 1;
  optional WorkflowOptions options = 2;
}

// VPCInfo - response for vpc create request
message VPCInfo {
  WorkflowStatus status = 1;
  ObjectStatus object_status = 2;
  string status_msg = 3;
  forge.Vpc vpc = 4;
}

// GetVPCRequest - request to fetch vpc
message GetVPCByIdRequest {
  common.UUID id = 1;
  optional WorkflowOptions options = 2;
}

// GetVPCRequest - request to fetch vpc
message GetVPCByNameRequest {
  string name = 1;
  optional WorkflowOptions options = 2;
}

// GetVPCRequest - request to fetch vpc
message GetVPCAllRequest {
  TransactionID transaction_id = 1;
  optional WorkflowOptions options = 2;
}

// GetVPCResponse - response for all get queries
message GetVPCResponse {
  WorkflowStatus status = 1;
  string status_msg = 2;
  forge.VpcList list = 3;
  TransactionID transaction_id = 4;
}

// VpcInventory - inventory info of all VPCs periodically collected
message VPCInventory {
  // List of VPCs
  repeated forge.Vpc vpcs = 1;
  // List of VPC propagation details
  repeated forge.NetworkSecurityGroupPropagationObjectStatus network_security_group_propagations = 6;
  // Reported timestamp of VPC inventory
  google.protobuf.Timestamp timestamp = 2;
  // Status of Inventory
  InventoryStatus inventory_status = 3;
  string status_msg = 4;
  // Inventory page information
  InventoryPage inventory_page = 5;
}
